--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -70,6 +70,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
