--- a/my_blog/package.json
+++ b/my_blog/package.json
@@ -12,9 +12,11 @@
     "ant-design-vue": "^1.4.11",
     "axios": "0.18.1",
     "core-js": "^3.6.4",
+    "highlight.js": "^10.4.0",
     "hls.js": "^0.14.8",
     "js-cookie": "2.2.0",
     "js-md5": "^0.7.3",
+    "marked": "^1.2.5",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-aplayer": "^1.6.1",
