update:session存入服务器改为存入redis

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -37,6 +37,7 @@ spring:
   redis:
     host: oopsw.top
     port: 6379
+    password: wsy112233
   mvc:
     format:
       date-time: yyyy-MM-dd HH:mm:ss
