--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <hutool.version>5.1.1</hutool.version>
+        <shiro-redis.version>3.2.3</shiro-redis.version>
     </properties>
 
     <dependencies>
@@ -148,6 +149,7 @@
         </dependency>
 
 
+
         <!--commons -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -180,10 +182,17 @@
             <version>1.1.11</version>
         </dependency>
 
+        <!--shiro集成redis的包-->
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>${shiro-redis.version}</version>
+        </dependency>
+        <!--shiro-和redis-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
-            <version>1.3.2</version>
+            <artifactId>shiro-spring-boot-web-starter</artifactId>
+            <version>1.5.3</version>
         </dependency>
     </dependencies>
 
