update:更换markdown存储方式，从存储markdown源码改为存储HTML源码

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -8,6 +8,8 @@ server:
 #  配置mapper位置
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 #  配置数据源
 spring:
