--- a/blog_admin/package.json
+++ b/blog_admin/package.json
@@ -25,6 +25,7 @@
         "normalize.css": "7.0.0",
         "nprogress": "0.2.0",
         "path-to-regexp": "2.4.0",
+        "sitdown": "^1.1.6",
         "vue": "2.6.10",
         "vue-router": "3.0.6",
         "vuex": "3.1.0"
