--- a/my_blog/package.json
+++ b/my_blog/package.json
@@ -18,6 +18,7 @@
     "js-md5": "^0.7.3",
     "marked": "^1.2.5",
     "nprogress": "^0.2.0",
+    "sitdown": "^1.1.6",
     "vue": "^2.6.11",
     "vue-aplayer": "^1.6.1",
     "vue-router": "^3.1.5",
